# architecture

./: .coverage  .dockerignore  .env  .env.example  .env.local.example  .env.production.example  .env.staging.example  .env.test  .env.unified.example  AGENT_GUIDE.md  ARCHITECTURE.md  CLAUDE.MD  COMMAND_GUIDE.md  CONFIGURATION_DISCREPANCIES.md  DEPLOYMENT.md  DEPLOYMENT_FIX_REPORT.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPMENT_ENVIRONMENT.md  DOCKER.md  DOCKER_ANALYSIS_INDEX.md  DOCKER_ARCHITECTURE_COMPARISON.md  DOCKER_ARCHITECTURE_VISUAL.md  DOCKER_COMPARISON_SUMMARY.md  DOCKER_COMPOSE_MIGRATION_GUIDE.md  DOCKER_FIXES_SUMMARY.md  DUPLICATE_DETECTION_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  RUNTIME_CONFIG_IMPLEMENTATION.md  STORY_5_IMPLEMENTATION_SUMMARY.md  STORY_5_VERIFICATION.md  TROUBLESHOOTING.md  agent-template.md  bashrc  command-template.md  compose.override.yml  compose.production.yml  (+11 more)
backend/: .dockerignore  .editorconfig  .env.docker  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .pytest-watch.ini  ARCHITECTURE.md  CICD_SETUP_SUMMARY.md  CI_CD_VALIDATION_REPORT.md  CODING_CONVENTIONS.md  CONTRIBUTING.md  DIRECTORY_TREE.txt  DOCKER.md  DOCKER_ACCEPTANCE_CRITERIA.md  DOCKER_PRODUCTION.md  Dockerfile  INVESTIGATION_REPORT.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STORY_2_CODE_REFERENCE.md  STORY_2_IMPLEMENTATION.md  STORY_7_DOCUMENTATION.md  STRUCTURE_SUMMARY.md  TESTING_SETUP_SUMMARY.md  coverage.json  docker-compose.dev.yml  docker-compose.production.yml  docker-dev.sh  docker-entrypoint-dev.sh  docker-entrypoint-prod.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  database.py  logging.py  test_config.py
backend/app/middleware/: __init__.py  error_handling.py  request_logging.py
backend/app/models/: __init__.py  base.py  user.py
backend/apps/: __init__.py
backend/apps/api/: __init__.py  apps.py  config_views.py  health_views.py  serializers.py  test_views.py  urls.py  views.py
backend/apps/assessments/: __init__.py  admin.py  apps.py  config.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/assessments/migrations/: 0001_initial.py  (+4 more)
backend/apps/core/: __init__.py  apps.py  database.py  exceptions.py  middleware.py  models.py
backend/apps/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  test_basic_login.py  test_session_persistence.py  test_store_user_info.py  urls.py  views.py
backend/apps/utils/: __init__.py  apps.py  helpers.py  validators.py
backend/config/: __init__.py  celery.py  env_config.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
backend/docs/: API.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  AUTHENTICATION.md  CICD.md  CODE_QUALITY.md  CONFIGURATION.md  CORS_CONFIGURATION.md  CORS_QUICK_REFERENCE.md  DATABASE.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_TOOLS_SUMMARY.md  HEALTH_CHECKS.md  LOGGING.md  MIGRATIONS.md  PRE_COMMIT_DEMO.md  QUICK_START.md  README.md  SCRIPTS.md  SECURITY.md  SERVER_SETUP.md  STORY_4_IMPLEMENTATION.md  STORY_4_IMPLEMENTATION_SUMMARY.md  STORY_6_IMPLEMENTATION.md  TESTING.md  TESTING_QUICK_REFERENCE.md  TOOL_DEMONSTRATION.md  VERIFICATION_CHECKLIST.md
backend/requirements/: base.txt  dev.txt  development.txt  prod.txt  production.txt  test.txt
backend/scripts/: __init__.py  dev.py  dev.sh  init_db.sql  prod.py  prod.sh  setup_dev_environment.sh  test_db_connection.py  test_migrations.py  verify_tools.sh
backend/src/apps/: README.md  __init__.py
backend/src/backend/: __init__.py  urls.py
backend/src/common/: __init__.py
backend/src/core/: __init__.py
backend/tests/: README.md  README_LOGGING_TESTS.md  __init__.py  conftest.py  factories.py  run_tests.sh  test_code_quality.py  test_configuration.py  test_data_generators.py  test_data_isolation.py  test_development_tools.py  test_example_patterns.py  test_exception_handler.py  test_health.py  test_issue_355_migration_roundtrip.py  test_middleware.py  test_story_21_1_verification.py  test_story_21_2_migration.py  test_story_21_3_display_labels.py  test_story_21_5_data_persistence.py  test_story_21_6_api_contract.py  test_test_data_generators.py  utils.py
backend/tests/acceptance/: test_story13_startup_scripts.py  test_story_4_acceptance.py  test_story_5_acceptance.py  test_story_6_authentication.py  test_story_9_security.py
backend/tests/e2e/: __init__.py
backend/tests/examples/: test_data_generator_examples.py
backend/tests/fixtures/: __init__.py  factories.py
backend/tests/integration/: __init__.py  test_api_documentation.py  test_assessment_api.py  test_auth_endpoints.py  test_cors_configuration.py  test_database_management.py  test_equipment_options_api.py  test_frontend_config.py  test_health_check.py  test_health_endpoints_integration.py  test_management_commands.py  test_migrate_equipment_data.py  test_server_startup.py
backend/tests/regression/: README.md  test_code_quality.py
backend/tests/unit/: __init__.py  test_assessment_database_constraints.py  test_assessment_models.py  test_assessment_serializers.py  test_auth_serializers.py  test_conditional_imports.py  test_config.py  test_cors_csrf_protection.py  test_database_connectivity.py  test_directory_structure.py  test_equipment_config.py  test_health_endpoints.py  test_input_validation.py  test_models.py  test_rate_limiting.py  test_security_headers.py  test_test_database_config.py  test_test_endpoint.py  test_user_model.py  test_version.py
(+726 files in other folders)
